...
          style={{
            color: Colors.ink[900],
            fontFamily: "Sora_700Bold",
            fontSize: 22,
          }}
        >
          Sign in
        </Text>
        <Text
          style={{
            marginTop: 6,
            marginBottom: 28,
            color: Colors.ink[500],
...
